--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,16 @@
 version: 2.1
- 
-orbs:
-  android: circleci/android@0.2.1
- 
+
 jobs:
   build:
-    executor: android/android
+    docker:
+      - image: cimg/android:2023.11.1  # Image ini sudah include Android SDK + JDK 17
     steps:
       - checkout
       - restore_cache:
           key: android-orb-v1-
       - run:
           name: Chmod permissions
-          command: sudo chmod +x ./gradlew
+          command: chmod +x ./gradlew
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
@@ -24,7 +22,7 @@ jobs:
       - run:
           name: Run Build
           command: ./gradlew build
-      - store_artifacts: 
+      - store_artifacts:
           path: app/build/reports
           destination: reports
       - run:
@@ -32,6 +30,6 @@ jobs:
           command: ./gradlew lint test
       - store_test_results:
           path: app/build/test-results
-      - store_artifacts:  
+      - store_artifacts:
           path: app/build/outputs/apk/debug/
           destination: artifact-file
